--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint-config-next": "14.2.14",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "sass": "^1.79.4",
     "ts-node": "^10.9.2",
     "typescript": "^5"
   }
