--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@storybook/nextjs": "^8.4.5",
     "@storybook/react": "^8.4.5",
     "@storybook/test": "^8.4.5",
+    "@svgr/webpack": "^8.1.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.5.0",
     "@testing-library/react": "^16.0.1",
