--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "immer": "^10.1.1",
     "next": "14.2.14",
     "react": "^18",
     "react-dom": "^18"
