--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "immer": "^10.1.1",
     "next": "14.2.14",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^3.2.2",
